created snacks section and banner

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,6 +22,34 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+<!-- Coffee and Snacks Section -->
+<div class="coffee-container">
+  <div class="content">
+    <h1>Coffee for you,<br>brewed with déjà vu</h1>
+
+    <ion-button class="view-menu" expand="block" shape="round">
+      <span>view menu</span>
+      <ion-icon name="eye" slot="end"></ion-icon>
+    </ion-button>
+
+    <div class="icons">
+      <ion-icon name="cafe" class="icon"></ion-icon>
+      <ion-icon name="beer" class="icon"></ion-icon>
+      <ion-icon name="ice-cream" class="icon"></ion-icon>
+      <ion-icon name="fast-food" class="icon"></ion-icon>
+    </div>
+  </div>
+  <div class="image">
+    <img src="assets/images/snacks.PNG" alt="Coffee and snacks">
+  </div>
+</div>
+
+<!-- Banner Section -->
+<div class="image-banner">
+  <img src="assets/images/Banner1.png" alt="Banner Image">
+</div>
+
   <!-- Best Sellers Label -->
   <div class="product-label">
     Best Sellers
