--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,7 +4,7 @@ ion-header {
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     overflow: hidden;
-    margin-bottom: 20px;
+    
 }
 
 .combined-toolbar {
@@ -69,11 +69,149 @@ ion-content {
     height: 100vh;
     padding: 20px;
     --background: #F9F2ED;
+    //  z-index: 1;
 }
 
+
+/* Snacks Styles */
+.coffee-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10px;
+}
+
+.content {
+    flex: 1;
+    max-width: 70%;
+
+}
+
+.content h1 {
+    font-size: 1.2rem;
+    line-height: 1.2;
+    color: #633E27;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+.view-menu {
+    color: white;
+    margin-bottom: 5px;
+    font-size: 0.7rem;
+    --padding: 4px 0px;
+    max-width: 250px;
+    --background: #633E27;
+}
+
+.icons {
+    display: flex;
+    gap: 6px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+.icon {
+    font-size: 1rem;
+    background-color: #633E27;
+    padding: 6px;
+    border-radius: 50%;
+    color: #fff;
+}
+
+.image {
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    // padding-right: 10px;
+}
+
+.image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+    object-fit: contain;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .content {
+        max-width: 80%;
+    }
+
+    .view-menu {
+        font-size: 0.8rem;
+        max-width: 500px;
+        margin-bottom: 10px;
+    }
+
+    .icon {
+        font-size: 1.2rem;
+        padding: 8px;
+    }
+     .image {
+    width: 250px;
+    height: 210px;
+    }
+}
+
+@media (max-width: 480px) {
+    .content h1 {
+        font-size: 0.98rem;
+        font-weight: 800;
+    }
+
+    .view-menu {
+        font-size: 0.7rem;
+        padding: 3px 0px;
+        max-width: 200px;
+    }
+
+    .icons {
+        gap: 4px;
+    }
+
+    .icon {
+        font-size: 1rem;
+        padding: 6px;
+    }
+
+    .content {
+        max-width: 100%;
+    }
+
+    .image {
+    width: 150px;
+    height: 180px;
+    }
+}
+
+
+/* Banner1 */
+.image-banner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-banner img {
+    width: 90%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 15px;
+    display: block;
+    margin-top: 20px;
+}
+
+
+/* Best Seller */
 .product-label {
     color: #633E27;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 800;
     text-align: left;
     margin: 20px 0 10px 15px;
