--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding">
-  <app-back-button path="/onboarding-4"></app-back-button>
+  <app-back-button path="/onboarding-2"></app-back-button>
 
   <div class="ion-text-center">
     <p class="text-head">
@@ -33,7 +33,7 @@
       </div>
 
       <!-- Custom Button Component -->
-      <app-custom-button text="Sign In" customClass="signInButton"></app-custom-button>
+      <app-custom-button text="Sign In" customClass="signInButton" (click)="proceed()"></app-custom-button>
 
       <div class="or-section">
         <p>or</p>
