--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,9 +1,10 @@
 /* Header Styles */
 ion-header {
     --background: #332218;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    overflow: auto;
+    border-bottom-left-radius: 20px !important;
+    border-bottom-right-radius: 20px !important;
+    overflow: hidden;
+    height: auto;
 }
 
 .combined-toolbar {
@@ -23,9 +24,10 @@ ion-header {
 }
 
 .logo {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     object-fit: contain;
+    margin-left:10px;
 }
 
 .title {
@@ -68,10 +70,14 @@ ion-content {
     height: 100%;
     padding: 20px;
     --background: #F9F2ED;
-    overflow: auto;
+    overflow-y: auto;
     // z-index: ;
 }
-
+ion-page {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 /* Snacks Styles */
 .coffee-container {
     display: flex;
@@ -115,7 +121,7 @@ ion-content {
     font-size: 1rem;
     background-color: #633E27;
     padding: 6px;
-    border-radius: 50%;
+    border-radius: 30%;
     color: #fff;
 }
 
@@ -158,7 +164,7 @@ ion-content {
     font-size: 16px;
     font-weight: 800;
     text-align: left;
-    margin: 20px 0 10px 15px;
+    margin: 20px 0 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -194,6 +200,7 @@ app-product-card {
     margin-top: 10px;
 }
 
+// FOOTER
 .footer {
     position: fixed;
     bottom: 0;
@@ -221,9 +228,9 @@ app-product-card {
     font-size: 24px;
 }
 
-.footer-button ion-label {
-    font-size: 12px;
-}
+
+
+// FOOTER
 
 @media (max-width: 768px) {
     .content {
@@ -257,7 +264,7 @@ app-product-card {
 
 @media (max-width: 480px) {
     .content h1 {
-        font-size: 0.9rem;
+        font-size: 1rem;
     }
 
     .view-menu {
