--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding">
-  <app-back-button path="/onboarding-4"></app-back-button>
+  <app-back-button path="/onboarding-2"></app-back-button>
 
   <div class="ion-text-center">
     <p class="text-head">
@@ -46,7 +46,7 @@
 
       
       <!-- custom button component -->
-      <app-custom-button text="Register" customClass="signInButton"></app-custom-button>
+      <app-custom-button text="Register" customClass="signInButton" (click)="proceed()"></app-custom-button>
 
 
     </ion-card>
